# tcz

./: .gitignore  CMakeLists.txt  Dockerfile  docker-startup.sh
changes/: changes.4.2.tcz
doc/: manual.txt
ideas/: @event.txt
include/: at_cmdtable.h  config.h  db.h  externs.h  fields.h  flagset.h  friend_flags.h  match.h  objectlists.h  primary_flags.h  prompts.h  quota.h  search.h  secondary_flags.h  signallist.h  structures.h
lib/: colourmap.tcz  generic.help.tcz  map.tcz
src/: Makefile  admin.c  array.c  boolexp.c  character.c  command.c  compression.c  container.c  create.c  db.c  destroy.c  edit.c  feelings.c  html.c  interface.c  logfiles.c  look.c  mail.c  match.c  move.c  options.c  predicates.c  prompt.c  query.c  request.c  search.c  selection.c  server.c  set.c  statistics.c  stringutils.c  unparse.c
