cmake_minimum_required(VERSION 3.8)
project(tcz)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_FLAGS "-ggdb -Wall -DLINUX -lm -lcrypt")

set(SOURCE_FILES
        include/at_cmdtable.h
        include/bank_cmdtable.h
        include/bbs_cmdtable.h
        include/boolean_flags.h
        include/colourmap.h
        include/command.h
        include/config.h
        include/db.h
        include/descriptor_flags.h
        include/edit_cmdtable.h
        include/emailforward.h
        include/externs.h
        include/fields.h
        include/flagset.h
        include/friend_flags.h
        include/general_cmdtable.h
        include/html.h
        include/html_entities.h
        include/html_tags.h
        include/logfile_table.h
        include/logfiles.h
        include/match.h
        include/modules.h
        include/modules_authors.h
        include/modules_c.h
        include/modules_h.h
        include/object_types.h
        include/objectlists.h
        include/primary_flags.h
        include/prompts.h
        include/query_cmdtable.h
        include/quota.h
        include/search.h
        include/secondary_flags.h
        include/short_cmdtable.h
        include/signallist.h
        include/smileys.h
        include/structures.h
        include/teleport.h
        include/yearlyevents.h
        lib/colourmap.tcz
        lib/disclaimer.tcz
        lib/example.tcz
        lib/generic.feelings.tcz
        lib/generic.help.tcz
        lib/generic.tutorial.tcz
        lib/local.feelings.tcz
        lib/local.help.tcz
        lib/local.tutorial.tcz
        lib/map.tcz
        lib/sites.tcz.gz
        lib/termcap
        lib/title1.tcz
        src/admin.c
        src/alias.c
        src/array.c
        src/banish.c
        src/bbs.c
        src/boolexp.c
        src/calculate.c
        src/channels.c
        src/character.c
        src/combat.c
        src/command.c
        src/communication.c
        src/compression.c
        src/container.c
        src/create.c
        src/db.c
        src/destroy.c
        src/edit.c
        src/event.c
        src/feelings.c
        src/finance.c
        src/friends.c
        src/global.c
        src/group.c
        src/help.c
        src/html.c
        src/interface.c
        src/lists.c
        src/logfiles.c
        src/look.c
        src/mail.c
        src/map.c
        src/match.c
        src/modules.c
        src/move.c
        src/options.c
        src/output.c
        src/pager.c
        src/pagetell.c
        src/predicates.c
        src/preferences.c
        src/prompt.c
        src/qmwlogsocket.c
        src/query.c
        src/request.c
        src/sanity.c
        src/search.c
        src/selection.c
        src/server.c
        src/serverinfo.c
        src/set.c
        src/sites.c
        src/statistics.c
        src/stringutils.c
        src/substitute.c
        src/tcz.c
        src/temp.c
        src/termcap.c
        src/unparse.c
        src/userlist.c
        src/yearlyevents.c)

include_directories(include)
include_directories(lib)

add_executable(tcz ${SOURCE_FILES})